--- a/_sass/components/_profile.scss
+++ b/_sass/components/_profile.scss
@@ -4,8 +4,6 @@
 
 .profile-card {
   text-align: center;
-  position: sticky;
-  top: calc(var(--space-16) + 1rem);
 
   .profile-photo {
     width: 180px;
