--- a/_sass/layouts/_home.scss
+++ b/_sass/layouts/_home.scss
@@ -22,7 +22,7 @@
 }
 
 .news-timeline {
-  margin-top: var(--space-8);
+  margin-top: 0;
 
   .news-item {
     padding: var(--space-4) 0;
